RESOLVED FIXED27979
Cannot scroll for box-reflect:right
https://bugs.webkit.org/show_bug.cgi?id=27979
Summary Cannot scroll for box-reflect:right
Shinichiro Hamaji
Reported 2009-08-04 03:15:07 PDT
Created attachment 34052 [details] Test case See the attached test case. For vertical reflection, we can move scrollbar to see the reflected image. However, we don't see a scrollbar for horizontal reflection. I'll send a patch soon later.
Attachments
Test case (420 bytes, text/html)
2009-08-04 03:15 PDT, Shinichiro Hamaji
no flags
Patch v1 (6.03 KB, patch)
2009-08-04 03:22 PDT, Shinichiro Hamaji
no flags
Patch v2 (29.91 KB, patch)
2009-08-04 03:27 PDT, Shinichiro Hamaji
no flags
Patch v3 (31.60 KB, patch)
2009-08-04 08:50 PDT, Shinichiro Hamaji
no flags
Patch v4 (6.80 KB, patch)
2009-08-04 09:52 PDT, Shinichiro Hamaji
abarth: commit-queue+
Patch v5 (8.22 KB, patch)
2009-08-06 20:24 PDT, Shinichiro Hamaji
abarth: commit-queue+
Shinichiro Hamaji
Comment 1 2009-08-04 03:22:28 PDT
Created attachment 34054 [details] Patch v1 --- 7 files changed, 67 insertions(+), 3 deletions(-)
Shinichiro Hamaji
Comment 2 2009-08-04 03:27:30 PDT
Created attachment 34057 [details] Patch v2 --- 7 files changed, 67 insertions(+), 3 deletions(-)
Shinichiro Hamaji
Comment 3 2009-08-04 03:28:17 PDT
I should have sent a png image in the patch.
Shinichiro Hamaji
Comment 4 2009-08-04 08:50:25 PDT
Created attachment 34066 [details] Patch v3 --- 9 files changed, 96 insertions(+), 4 deletions(-)
Shinichiro Hamaji
Comment 5 2009-08-04 08:52:53 PDT
Sorry, I forgot to add the html file of layout test and the change of expected results.
Eric Seidel (no email)
Comment 6 2009-08-04 09:12:05 PDT
Comment on attachment 34066 [details] Patch v3 Looks good to me. We could probably even make this a dumpAsText test. But this is also OK as is.
Shinichiro Hamaji
Comment 7 2009-08-04 09:30:25 PDT
(In reply to comment #6) > (From update of attachment 34066 [details]) > Looks good to me. We could probably even make this a dumpAsText test. But > this is also OK as is. This test is checking if scrollbar exists (if the size of reflected images are considered, the scrollbar should apprear). I think this kind of test can be done by dumpAsText test. Or, can we get overflowWidth from JavaScript?
Shinichiro Hamaji
Comment 8 2009-08-04 09:52:13 PDT
Created attachment 34071 [details] Patch v4 --- 8 files changed, 106 insertions(+), 4 deletions(-)
Shinichiro Hamaji
Comment 9 2009-08-04 09:53:47 PDT
> This test is checking if scrollbar exists (if the size of reflected images are > considered, the scrollbar should apprear). I think this kind of test can be > done by dumpAsText test. Or, can we get overflowWidth from JavaScript? Ah, I've found the way. I could change the position of scroll bar to see if the scroll bar is working.
Eric Seidel (no email)
Comment 10 2009-08-06 18:17:47 PDT
Comment on attachment 34071 [details] Patch v4 Still extra junk at the end of the test text output. But looks fine.
Shinichiro Hamaji
Comment 11 2009-08-06 20:24:37 PDT
Created attachment 34244 [details] Patch v5 --- 10 files changed, 121 insertions(+), 4 deletions(-)
Adam Barth
Comment 12 2009-08-07 00:32:12 PDT
Comment on attachment 34244 [details] Patch v5 Clearing review flag on attachment: 34244 Committing to http://svn.webkit.org/repository/webkit/trunk ... M LayoutTests/ChangeLog A LayoutTests/fast/reflections/reflection-overflow-scroll-expected.txt A LayoutTests/fast/reflections/reflection-overflow-scroll.html A LayoutTests/fast/reflections/resources/reflection-overflow-scroll.js M LayoutTests/platform/mac/fast/reflections/reflection-nesting-expected.txt M LayoutTests/platform/mac/fast/repaint/reflection-redraw-expected.txt M WebCore/ChangeLog M WebCore/rendering/RenderBlock.cpp M WebKitTools/ChangeLog M WebKitTools/Scripts/make-js-test-wrappers Committed r46889 M WebCore/ChangeLog M WebCore/rendering/RenderBlock.cpp M LayoutTests/platform/mac/fast/repaint/reflection-redraw-expected.txt M LayoutTests/platform/mac/fast/reflections/reflection-nesting-expected.txt M LayoutTests/ChangeLog A LayoutTests/fast/reflections/reflection-overflow-scroll-expected.txt A LayoutTests/fast/reflections/reflection-overflow-scroll.html A LayoutTests/fast/reflections/resources/reflection-overflow-scroll.js M WebKitTools/ChangeLog M WebKitTools/Scripts/make-js-test-wrappers r46889 = e8e74017eb842f4b9ac3313823d6b8fb47f69f56 (trunk) No changes between current HEAD and refs/remotes/trunk Resetting to the latest refs/remotes/trunk http://trac.webkit.org/changeset/46889
Adam Barth
Comment 13 2009-08-07 00:32:16 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.