2009-08-07  Shinichiro Hamaji  <hamaji@chromium.org>

Reviewed by Adele Peterson.

        Cannot scroll for box-reflect:right
        https://bugs.webkit.org/show_bug.cgi?id=27979

        Update m_overflowLeft an m_overflowWidth for reflection just like
        m_overflowTop and m_overflowHeight.

        * fast/reflections/reflection-overflow-scroll-expected.txt: Added.
        * fast/reflections/reflection-overflow-scroll.html: Added.
        * fast/reflections/resources/reflection-overflow-scroll.js: Added.
        * platform/mac/fast/reflections/reflection-nesting-expected.txt:
        * platform/mac/fast/repaint/reflection-redraw-expected.txt:

2009-08-07  Shinichiro Hamaji  <hamaji@chromium.org>

        Reviewed by Adele Peterson.

        Cannot scroll for box-reflect:right
        https://bugs.webkit.org/show_bug.cgi?id=27979

        Update m_overflowLeft an m_overflowWidth for reflection just like
        m_overflowTop and m_overflowHeight.

        Test: fast/reflections/reflection-overflow-scroll.html

        * rendering/RenderBlock.cpp:
        (WebCore::RenderBlock::layoutBlock):

2009-08-07  Shinichiro Hamaji  <hamaji@chromium.org>

        Reviewed by Adele Peterson.

        Cannot scroll for box-reflect:right
        https://bugs.webkit.org/show_bug.cgi?id=27979

        Update m_overflowLeft an m_overflowWidth for reflection just like
        m_overflowTop and m_overflowHeight.

        * Scripts/make-js-test-wrappers:  Added regexp to skip box-shadow-overflo
w-scroll.js

git-svn-id: svn://svn.chromium.org/blink/trunk@46889 bbb929c8-8fbe-4397-9dbb-9b2b20218538