third_party/WebKit/LayoutTests/fast/reflections/resources/reflection-overflow-scroll.js
@@ -1,0 +1,21 @@
+FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
+description(
+"Check if the size of reflected images are considered as overflow size. See this bug for detail: https://bugs.webkit.org/show_bug.cgi?id=27979."
+);
+
+var element = null;
+
+element = document.getElementById("horizontal");
+element.scrollLeft = 500;
+shouldBe("element.scrollLeft", "150");
+
+element = document.getElementById("vertical");
+element.scrollTop = 500;
+shouldBe("element.scrollTop", "80");
+
+// If we are in DTR, we don't need meaningless trailing messages.
+if (window.layoutTestController) {
+    document.getElementById("main").innerHTML = "";
+}
+
+var successfullyParsed = true;
